--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="decreaseDevice" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="deviceAmount" type="text" class="form-control text-center" value="1">
+                           <button id="increaseDevice" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5>$1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
@@ -77,6 +77,7 @@
          </div>
       </div>
    </section>
+   <script src="js/main.js"></script>
 </body>
 
 </html>
