--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                 <div class="col-md-4 status">
                   <h5>$<span id="subTotalPrice">1278</span></h5>
-                  <h5>$ <span id="taxAmount">0</span></h5>
+                  <h5>$ <span id="taxAmount">12.5</span>%</h5>
                   <h5>$<span id="totalPrice">1278</span></h5>
                 </div>
               </div>
