Remove child idea was a failure

--- a/index.html
+++ b/index.html
@@ -20,61 +20,65 @@
       <div class="container">
         <div class="cart">
           <div class="col-md-12 col-lg-10 mx-auto">
-            <div class="cart-item">
-              <div class="row">
-                <div class="col-md-7 center-item">
-                  <img src="images/product-1.png" alt="" />
-                  <h5>iPhone 11 128GB Black</h5>
-                </div>
+            <ul id="cartParent">
+              <li id="cartItem3" class="cartItem">
+                <div class="cart-item">
+                  <div class="row">
+                    <div class="col-md-7 center-item">
+                      <img src="images/product-1.png" alt="" />
+                      <h5>iPhone 11 128GB Black</h5>
+                    </div>
 
-                <div class="col-md-5 center-item">
-                  <div class="input-group number-spinner">
-                    <button id="decreaseDevice" class="btn btn-default">
-                      <i class="fas fa-minus"></i>
-                    </button>
-                    <input
-                      id="deviceAmount"
-                      type="text"
-                      class="form-control text-center"
-                      value="1"
-                    />
-                    <button id="increaseDevice" class="btn btn-default">
-                      <i class="fas fa-plus"></i>
-                    </button>
+                    <div class="col-md-5 center-item">
+                      <div class="input-group number-spinner">
+                        <button id="decreaseDevice" class="btn btn-default">
+                          <i class="fas fa-minus"></i>
+                        </button>
+                        <input
+                          id="deviceAmount"
+                          type="text"
+                          class="form-control text-center"
+                          value="1"
+                        />
+                        <button id="increaseDevice" class="btn btn-default">
+                          <i class="fas fa-plus"></i>
+                        </button>
+                      </div>
+                      <h5>$ <span id="iphonePrice">1219</span></h5>
+                      <img id="removeItem1" src="images/remove.png" alt="" class="remove-item" />
+                    </div>
                   </div>
-                  <h5>$ <span id="iphonePrice">1219</span></h5>
-                  <img src="images/remove.png" alt="" class="remove-item" />
                 </div>
-              </div>
-            </div>
-
-            <div class="cart-item">
-              <div class="row">
-                <div class="col-md-7 center-item mx-auto">
-                  <img src="images/product-2.png" alt="" />
-                  <h5>iPhone 11 Silicone Case - Black</h5>
-                </div>
-                <div class="col-md-5 center-item">
-                  <div class="input-group number-spinner">
-                    <button id="decreaseCase" class="btn btn-default">
-                      <i class="fas fa-minus"></i>
-                    </button>
-                    <input
-                      id="caseAmount"
-                      type="text"
-                      class="form-control text-center"
-                      value="1"
-                    />
-                    <button id="increaseCase" class="btn btn-default">
-                      <i class="fas fa-plus"></i>
-                    </button>
+              </li>
+              <li class="cartItem">
+                <div class="cart-item">
+                  <div class="row">
+                    <div class="col-md-7 center-item mx-auto">
+                      <img src="images/product-2.png" alt="" />
+                      <h5>iPhone 11 Silicone Case - Black</h5>
+                    </div>
+                    <div class="col-md-5 center-item">
+                      <div class="input-group number-spinner">
+                        <button id="decreaseCase" class="btn btn-default">
+                          <i class="fas fa-minus"></i>
+                        </button>
+                        <input
+                          id="caseAmount"
+                          type="text"
+                          class="form-control text-center"
+                          value="1"
+                        />
+                        <button id="increaseCase" class="btn btn-default">
+                          <i class="fas fa-plus"></i>
+                        </button>
+                      </div>
+                      <h5>$ <span id="casePrice">59</span></h5>
+                      <img id="removeItem" src="images/remove.png" alt="" class="remove-item" />
+                    </div>
                   </div>
-                  <h5>$ <span id="casePrice">59</span></h5>
-                  <img src="images/remove.png" alt="" class="remove-item" />
                 </div>
-              </div>
-            </div>
-
+              </li>
+            </ul>
             <div class="cart-item">
               <div class="row">
                 <div class="col-md-8">
